--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Johan Gras Portfolio
+title: Johan Gras
 
 # Short description of your site
-description: A description.
+description: My portfolio
 
 # --- Navigation bar options --- #
 
@@ -99,7 +99,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "Johan-Gras.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "johan-gras.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
