--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: My portfolio
 navbar-links:
   About Me: "aboutme"
   Projects: "projects"
+  Contact: "contact"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
