--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,10 @@ social-network-links:
   email: "johan.gras@outlook.com"
   #facebook: daattali
   github: johan-gras
-  twitter: gras_johan
+#  twitter: gras_johan
 #  reddit: yourname
 #  google-plus: +DeanAttali
-   linkedin: johan-gras
+#linkedin: johan-gras
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
