--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ social-network-links:
   email: "johan.gras@outlook.com"
   #facebook: daattali
   github: johan-gras
-#  twitter: gras_johan
+  twitter: gras_johan
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #linkedin: johan-gras
