--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ social-network-links:
   twitter: gras_johan
 #  reddit: yourname
 #  google-plus: +DeanAttali
-#linkedin: johan-gras
+  linkedin: johan-gras
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
